--- a/style.css
+++ b/style.css
@@ -3,10 +3,7 @@
 body {
     font-family: 'Inter', sans-serif;
     text-align: center;
-    border: 1px solid black;
-    margin: 5rem;
     text-decoration: none;
-    
 }
 
 header {
@@ -17,8 +14,8 @@ header {
 #myPhotoCover {
     margin-top: 10rem;
     display: inline-block;
-    width: 300px;
-    height: 300px;
+    width: 20rem;
+    height: 20rem;
     background-color: #2E2828;
     background-position: 50% 50%;
     background-size: cover;
@@ -26,14 +23,14 @@ header {
 }
 
 #myPhoto {
-    width: 200px;
-    height: 200px;
+    width: 14rem;
+    height: 14rem;
     background: url(./I.jpg);
     background-position: 50% 50%;
     background-size: cover;
     border-radius: 50%;
-    border: 15px solid #fff;
-    margin: 35px auto;
+    border: 1rem solid #fff;
+    margin: 2rem auto;
 }
 
 main {
