--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 header {
     height: 20rem;
-    background-image: url(./background.jpg);
+    background-image: url(./back.jpg);
 }
 
 #myPhotoCover {
@@ -30,7 +30,7 @@ header {
     background-position: 50% 50%;
     background-size: cover;
     border-radius: 50%;
-    border: 1rem solid #fff;
+    border: .5rem solid #9e9e9e;
     margin: 2rem auto;
 }
 
